welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:16: error: return outside method definition
    return
    ^